fixed login on mobile5

--- a/src/App.css
+++ b/src/App.css
@@ -69,7 +69,7 @@ input {
 
 .nav-bar>button {
   margin: 0;
-  margin-right: 50px;
+  margin-right: 20px;
   width: 250px;
   border: none;
   text-wrap: break-word;
